WebKit Bugzilla
New
Browse
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
290063
[iPad] chatgpt.com: Unable to scroll when selection extents from text inside the chat history to text in the chat box
https://bugs.webkit.org/show_bug.cgi?id=290063
Summary
[iPad] chatgpt.com: Unable to scroll when selection extents from text inside ...
Wenson Hsieh
Reported
2025-03-19 13:01:27 PDT
rdar://147239642
Attachments
Add attachment
proposed patch, testcase, etc.
Wenson Hsieh
Comment 1
2025-03-19 13:12:51 PDT
Pull request:
https://github.com/WebKit/WebKit/pull/42708
EWS
Comment 2
2025-03-19 18:06:14 PDT
Committed
292390@main
(bc301ce99d48): <
https://commits.webkit.org/292390@main
> Reviewed commits have been landed. Closing PR #42708 and removing active labels.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug