[iPad] chatgpt.com: Unable to scroll when selection extents from text inside the chat history to text in the chat box https://bugs.webkit.org/show_bug.cgi?id=290063 rdar://147239642

Reviewed by Abrar Rahman Protyasha, Megan Gardner, Aditya Keerthi, Tim Horton, and Richard Robinson.

Even after the changes in 287294@main, it's still possible for the text selection highlight to
prevent scrolling in subscrollable areas in the case where the subscrollable region is inside of a
`position: relative;` container that has a layer (e.g. by specifying a `z-index`).

In this case, even though all text interaction views (highlight, caret decorations, etc.) are marked
non-interactive when hit-testing `WKScrollView` for a subscrollable region to (possibly) begin
scrolling, it's still possible in this case for the `_UITextSelectionRangeView` under the
`_UITextSelectionHighlightView` to have user interaction enabled, even though its superview disables
user interaction. In the case where the range view happens to also cover the subscrollable region,
scrolling becomes impossible because we hit-test to a view above or outside of the view subtree
containing the `WKChildScrollView`.

Fix this by teaching `-makeTextSelectionViewsNonInteractiveForScope` to recurse through all subtrees
under the managed selection views, and mark all managed selection views as non-interactive (not just
the top-level views).

* LayoutTests/editing/selection/ios/scroll-overflow-container-with-selection-2-expected.txt: Added.
* LayoutTests/editing/selection/ios/scroll-overflow-container-with-selection-2.html: Added.

Add another layout test to exercise this fix.

* Source/WebKit/UIProcess/ios/UIKitUtilities.h:
* Source/WebKit/UIProcess/ios/UIKitUtilities.mm:
(-[UIView _wk_collectDescendantsIncludingSelf:matching:]):

Add a helper to aggregate all subviews (including `self`) for which the given block returns `YES`.

* Source/WebKit/UIProcess/ios/WKContentViewInteraction.mm:
(-[WKContentView makeTextSelectionViewsNonInteractiveForScope]):

Canonical link: https://commits.webkit.org/292390@main